# regulon

./: .gitignore  PLAN.md  pyproject.toml
.githooks/: pre-commit
